Them profile cho user

--- a/BTL_QlBi_a/Views/Shared/_LayoutUser.cshtml
+++ b/BTL_QlBi_a/Views/Shared/_LayoutUser.cshtml
@@ -134,7 +134,8 @@
                                     Xin chào, @Context.Session.GetString("TenKH")
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Hồ sơ cá nhân</a></li>
+                                    <li><a class="dropdown-item" href="/Users/Profile">
+                                        <i class="fa-solid fa-id-card me-2"></i>Hồ sơ cá nhân</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
                                         <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
