--- a/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_QuanLyBan.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_QuanLyBan.cshtml
@@ -18,6 +18,9 @@
 
             @if (isThuNgan)
             {
+                <button class="btn btn-info" onclick="window.location.href='/QLBan/DanhSachBanDat'" title="Xem danh sách bàn đặt">
+                    📅 Xem bàn đặt
+                </button>
                 <button class="btn btn-warning" onclick="TableManager.openReservationModal()">📅 Đặt bàn trước</button>
             }
             @if (isQuanLy)
